crates/lexing/tests/snapshots/lexer__operator_purs.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    LEFT_ARROW,
    WHITESPACE,
    LEFT_ARROW,
    WHITESPACE,
    RIGHT_ARROW,
    WHITESPACE,
    RIGHT_ARROW,
    WHITESPACE,
    RIGHT_THICK_ARROW,
    WHITESPACE,
    RIGHT_THICK_ARROW,
    WHITESPACE,
    DOUBLE_COLON,
    WHITESPACE,
    DOUBLE_COLON,
    WHITESPACE,
    FORALL,
    WHITESPACE,
    EQUAL,
    WHITESPACE,
    PERIOD,
    WHITESPACE,
    BACKSLASH,
    WHITESPACE,
    PIPE,
    WHITESPACE,
    AT,
    END_OF_FILE,
]
