crates/lexing/tests/snapshots/lexer__prefixed.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    PREFIX,
    DO,
    WHITESPACE,
    PREFIX,
    LOWER,
    WHITESPACE,
    PREFIX,
    UPPER,
    END_OF_FILE,
]
