crates/lexing/tests/snapshots/lexer__reserved.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    TICK,
    WHITESPACE,
    COMMA,
    END_OF_FILE,
]
