crates/lexing/tests/snapshots/lexer__string_escape.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    STRING,
    END_OF_FILE,
]
