crates/lexing/tests/snapshots/lexer__upper.snap
---
source: crates/lexing/tests/lexer.rs
description: "Type\n\nPrim.Type\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : UPPER
      text : "Type"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : "Prim."
      kind : UPPER
      text : "Type"
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 4, column: 1 }
     error : None
