crates/lexing/tests/snapshots/lexer__whitespace.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    WHITESPACE,
    END_OF_FILE,
]
